# raspberry-epaper

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
font/: OFL.txt
raspberry_epaper/: __init__.py  cli.py  combine.py  epd.py  epd_core.py  filepath.py  fitting.py  getBackgroundColor.py  get_background_color.py  print.py  type.py  valid_types.py
tests/: test_raspberry_epaper.py
tools/: create_version_file.sh
