[tool.poetry]
name = "raspberry-epaper"
version = "0.1.0"
description = ""
authors = ["yskoht <ysk.oht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
waveshare-epaper = "^1.0.3"
Pillow = "^8.4.0"
qrcode = "^7.3.1"
typer = "^0.4.0"

[tool.poetry.scripts]
epaper-print = 'raspberry_epaper.print:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
